otel_jaeger/k8s/base/service_otel.yml
apiVersion: v1
kind: Service

metadata:
  name: service-otel-collector
  labels:
    app: service-otel-collector
spec:
  ports:
    - port: 4317
      targetPort: 4317
      protocol: TCP
      name: otlp-grpc
    - port: 4318
      targetPort: 4318
      protocol: TCP
      name: otlp-http
    - port: 1888
      targetPort: 1888
      protocol: TCP
      name: pprof-extension
    - port: 13133
      targetPort: 13133
      protocol: TCP
      name: health-check-extension
    - port: 55679
      targetPort: 55679
      protocol: TCP
      name: zpages-extension
  selector:
    app: service-otel-collector
